# SquareGen

./: CMakeLists.txt  README.md  SquareGen.kdev4
doc/: paper.tex
src/: AbstractMCS.cpp  AbstractMCS.hpp  BeamNRPA.cpp  BeamNRPA.hpp  BeamNRPATest.cpp  CMakeLists.txt  NMCS.cpp  NMCS.hpp  NMCSTest.cpp  NRPA.cpp  NRPA.hpp  NRPATest.cpp  countSquares.cpp  countTest.cpp  experiment.cpp  func.cpp  func.hpp  genBeamNRPA.cpp  genNMCS.cpp  genNRPA.cpp  main.cpp  squareGen.cpp  testMCS.cpp  types.hpp
